:wrench: search channels

--- a/assets/data/lang/en-US.json
+++ b/assets/data/lang/en-US.json
@@ -52,6 +52,23 @@
           "separator": "or"
         }
       }
+    },
+    "chat": {
+      "sidebar": {},
+      "logo": {},
+      "search": {
+        "placeholder": "Search..."
+      },
+      "list": {
+        "channels": {
+          "label": "rooms",
+          "add": "Create a room"
+        },
+        "pms": {
+          "label": "people",
+          "add": "Talk to someone"
+        }
+      }
     }
   }
 }
